Revert "fix long url overflow"
This reverts commit b33e5e0240a875de3dd67e363f135beff05d7630.

--- a/assets/ding.scss
+++ b/assets/ding.scss
@@ -210,13 +210,6 @@ nav[data-toggle="toc"] .nav .active .nav {
   margin-bottom: 1rem;
 }
 
-// long url overflow
-
-html {
-  word-wrap: break-word;
-  word-break: break-word
-}
-
 h1, .h1 {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
